# crust

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  test.crst  test2.crst
apps/: CMakeLists.txt  app.cpp
apps/src/: app.cpp
include/crust/: lexer.hpp
include/crust/utils/: errorlogger.hpp  printhelper.hpp  sourceloc.hpp
lib/: CMakeLists.txt  lexer.cpp  parser.cpp
lib/include/CFG/: cfg.hpp  declarations.hpp  expressions.hpp  misc.hpp  statements.hpp
lib/include/TAC/: Quad.hpp  TACNode.hpp
lib/include/common/: errorlogger.hpp  sourceloc.hpp
lib/include/parser/: lexer.hpp  parser.hpp
lib/include/utils/: printhelper.hpp  uid.hpp
lib/src/common/: errorlogger.cpp  sourceloc.cpp
lib/src/parser/: lexer.cpp  parser.cpp
lib/utils/: errorlogger.cpp  sourceloc.cpp
samples/: condnal.gost
spec/: cfg.dot  example.crst  example.gost  fsm.dot  gost.cfg  gost2.cfg  grammar.bnf  grammar.cfg  spec.md  tokens.g
src/: CMakeLists.txt  main.cpp
src/lexer/: lexer.cpp  lexer.hpp
src/utils/: errorlogger.cpp  errorlogger.hpp  printhelper.hpp  sourceloc.cpp  sourceloc.hpp
tests/: CMakeLists.txt  lexer_tests.cpp
tests/source_code/: identifiers.crst  literals.crst  sort.crst  swap.crst
tests/source_code/basic/: comments.crst  keywords.crst  misc_symbols.crst  operators.crst
tests/source_code/errors/: numbers.crst  string.crst  symbol.crst
tests/source_code/full/: fact.crst  sort.crst  swap.crst
tests/src/: lexer_tests.cpp
utils/: ll1.htm  ll1.json
